[project]
name = "dnapng"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jam Hernandez Quiceno", email = "jammarher369@gmail.com" }]
dependencies = []

[project.scripts]
dnapng = "dnapng.__main__:main"

[tool.mypy]
python_version = "3.12"
strict = true
disable_error_code = ["import-untyped"]
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_return_any = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.pydocstyle]
convention = "pep257"
