[project]
name = "dnapng"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jam Hernandez Quiceno", email = "jammarher369@gmail.com" }]
dependencies = ["numpy>=2.0.1", "pillow>=10.4.0"]

[project.scripts]
dnapng = "dnapng.__main__:main"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E741"]

[tool.ruff.pydocstyle]
convention = "pep257"
